--- a/src/engine/ruleset/integrations/docker-listener/decoders/docker-listener.yml
+++ b/src/engine/ruleset/integrations/docker-listener/decoders/docker-listener.yml
@@ -26,7 +26,7 @@ check:
 
 parse:
   logpar:
-    - event.original: <~json/json>
+    - event.original: <json_event/json>
 
 definitions:
   MAP_ContainerStatusToEventType:
@@ -104,119 +104,119 @@ definitions:
     update: change
 
 normalize:
- - check: exists($~json.docker)
+ - check: exists($json_event.docker)
    map:
     - event.module: docker-listener
     - event.dataset: wodle-docker-listener
     - event.kind: event # alert or metric kind can be a possibility too
     - event.outcome: unknown
-    - container.id: $~json.docker.id
-    - event.start: +date_from_epoch/$~json.docker.time
+    - container.id: $json_event.docker.id
+    - event.start: +date_from_epoch/$json_event.docker.time
 
   # Containers
  - check:
-    - ~json.docker.Type: container
+    - json_event.docker.Type: container
    logpar:
-      - ~json.docker.status: '<~tmp.docker_status>(?:<~tmp.docker_command>)'
+      - json_event.docker.status: '<~tmp.docker_status>(?:<~tmp.docker_command>)'
    map:
     - event.category: +array_append/host/session
     - event.type: +get_value/$MAP_ContainerStatusToEventType/$~tmp.docker_status
     - event.outcome: success
-    - event.duration: $~json.docker.Actor.Attributes.execDuration
-    - container.image.name: $~json.docker.from
+    - event.duration: $json_event.docker.Actor.Attributes.execDuration
+    - container.image.name: $json_event.docker.from
     - process.command_line: $~tmp.docker_command
-    - process.exit_code: $~json.docker.Actor.Attributes.exitCode
-    - process.pid: $~json.docker.execID
- - check: +string_equal/$~json.docker.Type/container AND +string_not_equal/$~json.docker.Actor.Attributes.exitCode/0
+    - process.exit_code: $json_event.docker.Actor.Attributes.exitCode
+    - process.pid: $json_event.docker.execID
+ - check: +string_equal/$json_event.docker.Type/container AND +string_not_equal/$json_event.docker.Actor.Attributes.exitCode/0
    map:
     - event.outcome: failed
 
   # Images
  - check:
-    - ~json.docker.Type: image
+    - json_event.docker.Type: image
    map:
     - event.category: +array_append/host/session
-    - event.type: +get_value/$MAP_ImageActionToEventType/$~json.docker.status
-    - container.image.name: $~json.docker.Actor.Attributes.name
+    - event.type: +get_value/$MAP_ImageActionToEventType/$json_event.docker.status
+    - container.image.name: $json_event.docker.Actor.Attributes.name
 
   # Plugins
  - check:
-    - ~json.docker.Type: plugin
+    - json_event.docker.Type: plugin
    map:
     - event.category: +array_append/package
-    - event.type: +get_value/$MAP_PluginActionToEventType/$~json.docker.Action
-    - container.id: $~json.docker.Actor.ID
+    - event.type: +get_value/$MAP_PluginActionToEventType/$json_event.docker.Action
+    - container.id: $json_event.docker.Actor.ID
     #Custom field
-    - ~plugin.name: $~json.docker.Actor.Attributes.name
+    - ~plugin.name: $json_event.docker.Actor.Attributes.name
 
   # Volumes
  - check:
-    - ~json.docker.Type: volume
+    - json_event.docker.Type: volume
    map:
     - event.category: +array_append/file/driver
-    - event.type: +get_value/$MAP_VolumeActionToEventType/$~json.docker.Action
-    - container.id: $~json.docker.Actor.ID
+    - event.type: +get_value/$MAP_VolumeActionToEventType/$json_event.docker.Action
+    - container.id: $json_event.docker.Actor.ID
     #Custom field
-    - ~volume.attributes: $~json.docker.Actor.Attributes
+    - ~volume.attributes: $json_event.docker.Actor.Attributes
 
   # Networks
  - check:
-    - ~json.docker.Type: network
+    - json_event.docker.Type: network
    map:
     - event.category: +array_append/network
-    - event.type: +get_value/$MAP_NetworkActionToEventType/$~json.docker.Action
-    - container.id: $~json.docker.Actor.ID
-    - network.type: $~json.docker.Actor.Attributes.type
-    - network.name: $~json.docker.Actor.Attributes.name
+    - event.type: +get_value/$MAP_NetworkActionToEventType/$json_event.docker.Action
+    - container.id: $json_event.docker.Actor.ID
+    - network.type: $json_event.docker.Actor.Attributes.type
+    - network.name: $json_event.docker.Actor.Attributes.name
 
   # Daemons
  - check:
-    - ~json.docker.Type: daemon
+    - json_event.docker.Type: daemon
    map:
     - event.category: +array_append/process
     - event.type: +array_append/end/start
 
   # Services
  - check:
-    - ~json.docker.Type: service
+    - json_event.docker.Type: service
    map:
     - event.category: +array_append/process
-    - event.type: +get_value/$MAP_BaseActionToEventType/$~json.docker.Action
-    - container.id: $~json.docker.Actor.ID
-    - service.name: $~json.docker.Actor.Attributes.name
+    - event.type: +get_value/$MAP_BaseActionToEventType/$json_event.docker.Action
+    - container.id: $json_event.docker.Actor.ID
+    - service.name: $json_event.docker.Actor.Attributes.name
 
   # Nodes
  - check:
-    - ~json.docker.Type: node
+    - json_event.docker.Type: node
    map:
     - event.category: +array_append/host/network
-    - event.type: +get_value/$MAP_BaseActionToEventType/$~json.docker.Action
-    - service.node.name: $~json.docker.Actor.Attributes.name
+    - event.type: +get_value/$MAP_BaseActionToEventType/$json_event.docker.Action
+    - service.node.name: $json_event.docker.Actor.Attributes.name
     #Custom field
-    - ~node.attributes: $~json.docker.Actor.Attributes
+    - ~node.attributes: $json_event.docker.Actor.Attributes
 
   # Secrets
  - check:
-    - ~json.docker.Type: secret
+    - json_event.docker.Type: secret
    map:
     - event.category: +array_append/file/authentication
-    - event.type: +get_value/$MAP_BaseActionToEventType/$~json.docker.Action
-    - container.id: $~json.docker.Actor.ID
+    - event.type: +get_value/$MAP_BaseActionToEventType/$json_event.docker.Action
+    - container.id: $json_event.docker.Actor.ID
     #Custom field
-    - ~secret.name : $~json.docker.Actor.Attributes.name
+    - ~secret.name : $json_event.docker.Actor.Attributes.name
 
   # Configs
  - check:
-    - ~json.docker.Type: config
+    - json_event.docker.Type: config
    map:
     - event.category: +array_append/configuration/file
-    - event.type: +get_value/$MAP_BaseActionToEventType/$~json.docker.Action
-    - container.id: $~json.docker.Actor.ID
+    - event.type: +get_value/$MAP_BaseActionToEventType/$json_event.docker.Action
+    - container.id: $json_event.docker.Actor.ID
     #Custom field
-    - ~configuration.name : $~json.docker.Actor.Attributes.name
+    - ~configuration.name : $json_event.docker.Actor.Attributes.name
 
  - map:
     - wazuh.decoders: +array_append/docker-listener
     #cleanup
-    - ~json: delete()
+    - json_event: delete()
     - ~tmp: delete()
