--- a/src/engine/ruleset/wazuh-core/decoders/core-windows.yml
+++ b/src/engine/ruleset/wazuh-core/decoders/core-windows.yml
@@ -19,6 +19,7 @@ parents:
   - decoder/core-wazuh-message/0
 
 check:
+  # Value 102 is equal to character 'f' in ASCII
   - wazuh.queue: 102
 
 normalize:
