--- a/src/engine/test/acceptance_test/engine/ruleset/decoders/decoder.yml
+++ b/src/engine/test/acceptance_test/engine/ruleset/decoders/decoder.yml
@@ -20,8 +20,8 @@ metadata:
 
 check:
   - wazuh.test.format: text
-  - wazuh.event.original: exists()
-  - wazuh.test.ingested: exists()
+  - wazuh.event.original: +exists
+  - wazuh.test.ingested: +exists
   - wazuh.test.kind: event
 
 normalize:
