--- a/src/engine/ruleset/integrations/system/decoders/system-auth.yml
+++ b/src/engine/ruleset/integrations/system/decoders/system-auth.yml
@@ -47,50 +47,52 @@ check: $isAuthProcess
 
 normalize:
   - map:
-      - ~empty: ""
-      - event.module: "system"
-      - event.dataset: "system-auth"
-      - event.outcome: "success"
-      - event.kind: "event"
+      - event.dataset: system-auth
+      - event.kind: event
+      - event.module: system
+      - event.outcome: success
+      - wazuh.decoders: array_append(system-auth)
+
+      - _empty: ""
 
   - check:
       - process.name: "sshd"
     logpar:
-      - message: <~system.auth.ssh.event> <~system.auth.ssh.method> for <user.name> from <source.ip> port <source.port> ssh2(?:<~>)
-      - message: <~system.auth.ssh.event> user <user.name> from <source.ip>(? port <source.port>)
+      - message: <_system.auth.ssh.event> <_system.auth.ssh.method> for <user.name> from <source.ip> port <source.port> ssh2(?:<~>)
+      - message: <_system.auth.ssh.event> user <user.name> from <source.ip>(? port <source.port>)
       - message: Did not receive identification string from <source.ip>
-      - message: subsystem request for <~system.auth.ssh.subsystem> by user <user.name>
-      - message: "<~system.auth.ssh.session.action>: Too many authentication <~system.auth.ssh.event> for <user.name> [preauth]"
-      - message: "<user.name> [<~>][<~>]: <~system.auth.ssh.event>: <~system.auth.ssh.session.process_id> tty<~/literal/\\/>?<~/literal/s><~process.tty.char_device.major>"
-      - message: "<~system.auth.ssh.event>: Read from socket failed: Connection reset by peer [preauth]"
-      - message: "Received <~system.auth.ssh.event> from <source.ip>: <~>:  [<~>]"
+      - message: subsystem request for <_system.auth.ssh.subsystem> by user <user.name>
+      - message: "<_system.auth.ssh.session.action>: Too many authentication <_system.auth.ssh.event> for <user.name> [preauth]"
+      - message: "<user.name> [<~>][<~>]: <_system.auth.ssh.event>: <_system.auth.ssh.session.process_id> tty<~/literal/\\/>?<~/literal/s><_system.process.tty.char_device.major>"
+      - message: "<_system.auth.ssh.event>: Read from socket failed: Connection reset by peer [preauth]"
+      - message: "Received <_system.auth.ssh.event> from <source.ip>: <~>:  [<~>]"
 
-  - check: $~system.auth.ssh.event=="Accepted" OR $~system.auth.ssh.event=="USER_PROCESS"
+  - check: $_system.auth.ssh.event=="Accepted" OR $_system.auth.ssh.event=="USER_PROCESS"
     map:
+      - event.action: ssh_login
+      - event.category: array_append(authentication, session)
+      - event.outcome: success
       - event.type: array_append(access, allowed)
-      - event.category: array_append(authentication, session)
-      - event.action: "ssh_login"
-      - event.outcome: "success"
 
-  - check: $~system.auth.ssh.event=="DEAD_PROCESS" OR $~system.auth.ssh.event=="disconnect"
+  - check: $_system.auth.ssh.event=="DEAD_PROCESS" OR $_system.auth.ssh.event=="disconnect"
     map:
+      - event.action: ssh_login
+      - event.category: array_append(authentication, session)
+      - event.outcome: success
       - event.type: array_append(end)
-      - event.category: array_append(authentication, session)
-      - event.action: "ssh_login"
-      - event.outcome: "success"
 
-  - check: $~system.auth.ssh.event=="Invalid" OR $~system.auth.ssh.event=="Failed" OR $~system.auth.ssh.event=="failures" OR $~system.auth.ssh.event=="fatal"
+  - check: $_system.auth.ssh.event=="Invalid" OR $_system.auth.ssh.event=="Failed" OR $_system.auth.ssh.event=="failures" OR $_system.auth.ssh.event=="fatal"
     map:
-      - event.type: array_append(access, denied)
+      - event.action: ssh_login
       - event.category: array_append(authentication, session)
-      - event.action: "ssh_login"
-      - event.outcome: "failure"
+      - event.outcome: failure
+      - event.type: array_append(access, denied)
 
   - check:
-      - process.name: "sudo"
+      - process.name: sudo
     logpar:
-      - message: "<user.name> : <~system.auth.sudo.error> ; TTY=tty<~/literal/\\/>?<~/literal/s><~system.process.tty.char_device.major> ; PWD=<~system.auth.sudo.pwd> ; USER=<user.effective.name> ; COMMAND=<~system.auth.sudo.command>"
-      - message: "<user.name> : TTY=tty<~/literal/\\/>?<~/literal/s><~system.process.tty.char_device.major> ; PWD=<~system.auth.sudo.pwd> ; USER=<user.effective.name> ; COMMAND=<~system.auth.sudo.command>"
+      - message: "<user.name> : <_system.auth.sudo.error> ; TTY=tty<~/literal/\\/>?<~/literal/s><_system.process.tty.char_device.major> ; PWD=<_system.auth.sudo.pwd> ; USER=<user.effective.name> ; COMMAND=<_system.auth.sudo.command>"
+      - message: "<user.name> : TTY=tty<~/literal/\\/>?<~/literal/s><_system.process.tty.char_device.major> ; PWD=<_system.auth.sudo.pwd> ; USER=<user.effective.name> ; COMMAND=<_system.auth.sudo.command>"
     map:
       - event.category: array_append(process)
       - event.type: array_append(start)
@@ -98,50 +100,50 @@ normalize:
   - check:
       - message: contains(pam_)
     logpar:
-      - message: "pam_unix\\(<~>:<~>\\): session <~system.auth.pam.session.action> for user <~system.auth.pam.foruser.name> by <~system.auth.pam.byuser.name>\\(uid=\\)"
-      - message: "pam_unix\\(<~>:<~>\\): session <~system.auth.pam.session.action> for user <~system.auth.pam.foruser.name> by \\(uid=<user.id>\\)"
-      - message: "pam_unix\\(<~>:<~>\\): session <~system.auth.pam.session.action> for user <~system.auth.pam.foruser.name>"
+      - message: "pam_unix\\(<~>:<~>\\): session <_system.auth.pam.session.action> for user <_system.auth.pam.foruser.name> by <_system.auth.pam.byuser.name>\\(uid=\\)"
+      - message: "pam_unix\\(<~>:<~>\\): session <_system.auth.pam.session.action> for user <_system.auth.pam.foruser.name> by \\(uid=<user.id>\\)"
+      - message: "pam_unix\\(<~>:<~>\\): session <_system.auth.pam.session.action> for user <_system.auth.pam.foruser.name>"
       - message: "pam_succeed_if\\(<~>:<~>\\): requirement <~> not met by user <user.name>"
-      - message: "pam_unix\\(<~>:<~>\\): authentication <~system.auth.pam.session.action>; logname=<~system.auth.pam.foruser.name>?<~/literal/> uid=<user.id>?<~/literal/> euid=<user.effective.id>?<~/literal/> tty=<~system.auth.pam.tty>?<~/literal/> ruser=<~system.auth.pam.remote.user>?<~/literal/> rhost=<source.ip>?<~/literal/>  user=<user.name>?<~/literal/>"
+      - message: "pam_unix\\(<~>:<~>\\): authentication <_system.auth.pam.session.action>; logname=<_system.auth.pam.foruser.name>?<~/literal/> uid=<user.id>?<~/literal/> euid=<user.effective.id>?<~/literal/> tty=<_system.auth.pam.tty>?<~/literal/> ruser=<_system.auth.pam.remote.user>?<~/literal/> rhost=<source.ip>?<~/literal/>  user=<user.name>?<~/literal/>"
     map:
       - event.category: array_append(authentication, session)
 
   - check:
       - message: contains(PAM)
     logpar:
-      - message: "PAM <~> more authentication <~system.auth.pam.session.action>; logname=<~system.auth.pam.foruser.name>?<~/literal/> uid=<user.id>?<~/literal/> euid=<user.effective.id>?<~/literal/> tty=<~system.auth.pam.tty>?<~/literal/> ruser=<~system.auth.pam.remote.user>?<~/literal/> rhost=<source.ip>?<~/literal/>  user=<user.name>?<~/literal/>"
+      - message: "PAM <~> more authentication <_system.auth.pam.session.action>; logname=<_system.auth.pam.foruser.name>?<~/literal/> uid=<user.id>?<~/literal/> euid=<user.effective.id>?<~/literal/> tty=<_system.auth.pam.tty>?<~/literal/> ruser=<_system.auth.pam.remote.user>?<~/literal/> rhost=<source.ip>?<~/literal/>  user=<user.name>?<~/literal/>"
     map:
       - event.category: array_append(authentication, session)
 
   - check:
-      - ~system.auth.pam.byuser.name: string_not_equal($~empty)
+      - _system.auth.pam.byuser.name: string_not_equal($_empty)
     map:
-      - user.name: $~system.auth.pam.byuser.name
-      - user.effective.name: $~system.auth.pam.foruser.name
+      - user.name: $_system.auth.pam.byuser.name
+      - user.effective.name: $_system.auth.pam.foruser.name
 
   - check:
-      - ~system.auth.pam.byuser.name: not_exists()
+      - _system.auth.pam.byuser.name: not_exists()
     map:
-      - user.name: $~system.auth.pam.foruser.name
+      - user.name: $_system.auth.pam.foruser.name
 
-  - check: $~system.auth.pam.session.action=="opened" OR $~system.auth.ssh.event=="USER_PROCESS"
+  - check: $_system.auth.pam.session.action=="opened" OR $_system.auth.ssh.event=="USER_PROCESS"
     map:
       - event.type: array_append(start)
 
-  - check: $~system.auth.pam.session.action=="closed"
+  - check: $_system.auth.pam.session.action=="closed"
     map:
       - event.type: array_append(end)
 
   - check: $process.name=="groupadd" OR $process.name=="useradd"
     logpar:
       - message: "new group: name=<group.name>, GID=<group.id>"
-      - message: "new user: name=<user.name>, UID=<user.id>, GID=<group.id>, home=<~system.auth.useradd.home>, shell=<~system.auth.useradd.shell>(?,<~>)"
+      - message: "new user: name=<user.name>, UID=<user.id>, GID=<group.id>, home=<_system.auth.useradd.home>, shell=<_system.auth.useradd.shell>(?,<~>)"
       - message: "group added to <file.name>: name=<group.name>(?, GID=<group.id>)"
-      - message: "<~system.auth.event.outcome> adding user '<user.name>'(?,<~>)"
+      - message: "<_system.auth.event.outcome> adding user '<user.name>'(?,<~>)"
 
-  - check: $~system.auth.event.outcome=="failed" OR $~system.auth.pam.session.action=="failure"
+  - check: $_system.auth.event.outcome=="failed" OR $_system.auth.pam.session.action=="failure"
     map:
-      - event.outcome: "failure"
+      - event.outcome: failure
 
   - check: $process.name=="groupadd" OR $process.name=="groupdel" OR $process.name=="groupmod" OR $process.name=="useradd" OR $process.name=="userdel" OR $process.name=="usermod"
     map:
@@ -175,11 +177,6 @@ normalize:
       - source.address: $source.ip
       - related.user: array_append($user.name, $user.effective.name)
       - related.ip: array_append($source.ip)
-      - process.command_line: $~system.auth.sudo.command
-      - process.tty.char_device.major: $~system.process.tty.char_device.major
-      - process.working_directory: $~system.auth.sudo.pwd
-      - ~TAG: delete()
-      - ~system: delete()
-
-  - map:
-      - wazuh.decoders: array_append(system-auth)
+      - process.command_line: $_system.auth.sudo.command
+      - process.tty.char_device.major: $_system.process.tty.char_device.major
+      - process.working_directory: $_system.auth.sudo.pwd
