--- a/src/engine/ruleset/integrations/wazuh-indexer/decoders/wazuh-indexer-server.yml
+++ b/src/engine/ruleset/integrations/wazuh-indexer/decoders/wazuh-indexer-server.yml
@@ -19,8 +19,8 @@ parents:
   - decoder/integrations/0
 
 check:
-  - ~json.type: server
-  - ~json.cluster\.name: exists()
+  - json_event.type: server
+  - json_event.cluster\.name: exists()
   # TODO: Once the events arrive tagged, uncomment the following two lines
   # - event.module: wazuh-indexer
   # - event.dataset: wazuh-indexer-server
@@ -31,17 +31,17 @@ definitions:
 
 normalize:
   - map:
-      - ~json.timestamp: +replace/,/.
+      - json_event.timestamp: +replace/,/.
   - logpar:
-      - ~json.timestamp: <@timestamp/%FT%TZ>
+      - json_event.timestamp: <@timestamp/%FT%TZ>
   - map:
       - event.module: wazuh-indexer
       - event.dataset: wazuh-indexer-server
       - wazuh.decoders: +array_append/wazuh-indexer-server
       - event.kind: event
       - event.category: +array_append/database
-      - log.level: $~json.level
-      - log.logger: $~json.component
+      - log.level: $json_event.level
+      - log.logger: $json_event.component
 
   - check: $isError
     map:
@@ -52,11 +52,11 @@ normalize:
       - event.type: +array_append/info
 
   - map:
-      - host.name: $~json.node\.name
-      - host.id: $~json.node\.id
-      - ~cluster.name: $~json.cluster\.name
-      - ~cluster.uuid: $~json.cluster\.uuid
-      - ~node.name: $~json.node\.name
-      - ~node.id: $~json.node\.id
-      - message: $~json.message
-      - ~json: delete()
+      - host.name: $json_event.node\.name
+      - host.id: $json_event.node\.id
+      - ~cluster.name: $json_event.cluster\.name
+      - ~cluster.uuid: $json_event.cluster\.uuid
+      - ~node.name: $json_event.node\.name
+      - ~node.id: $json_event.node\.id
+      - message: $json_event.message
+      - json_event: delete()
