--- a/src/engine/ruleset/integrations/windows/decoders/windows-event-decoder.yml
+++ b/src/engine/ruleset/integrations/windows/decoders/windows-event-decoder.yml
@@ -17,11 +17,11 @@ metadata:
   versions: [Vista, "7", "8", "10", "11", Server 2012, Server 2016, Server 2019, Server 2022]
 
 check:
-  - ~json.Event: exists()
+  - json_event.Event: exists()
 
 parse:
   logpar:
-    - ~json.Event: <~windows/xml/windows>
+    - json_event.Event: <~windows/xml/windows>
 
 normalize:
  - map:
@@ -69,4 +69,4 @@ normalize:
 
 # Cleanup
  - map:
-   - ~json: delete()
+   - json_event: delete()
