--- a/src/engine/ruleset/wazuh-core/decoders/ciscat/ciscat.yml
+++ b/src/engine/ruleset/wazuh-core/decoders/ciscat/ciscat.yml
@@ -28,72 +28,72 @@ parse:
   logpar:
     # Example log:
     # {"type":"scan_info","scan_id":1886296483,"cis":{"benchmark":"CIS Ubuntu Linux 16.04 LTS Benchmark","profile":"xccdf_org.cisecurity.benchmarks_profile_Level_2_-_Server","hostname":"10-206-u20-agent4","timestamp":"2022-09-16T15:09:53.048Z","pass":90,"fail":93,"error":0,"unknown":1,"notchecked":36,"score":"49.5%"}}
-    - event.original: <~json/json>
+    - event.original: <json_event/json>
 
 normalize:
-  - check:
-      - wazuh.origin: "wodle_cis-cat"
-      - ~json.cis: exists()
-      - ~json.type: string_equal(scan_info)
-
-  - check:
-      - ~json.scan_id: not_exists()
-    map:
-      - ~json.scan_id: "NULL"
-
-  - check:
-      - ~json.cis.timestamp: not_exists()
-    map:
-      - ~json.cis.timestamp: "NULL"
-
-  - check:
-      - ~json.cis.benchmark: not_exists()
-    map:
-      - ~json.cis.benchmark: "NULL"
-
-  - check:
-      - ~json.cis.profile: not_exists()
-    map:
-      - ~json.cis.profile: "NULL"
-
-  - check:
-      - ~json.cis.pass: not_exists()
-    map:
-      - ~json.cis.pass: "NULL"
-
-  - check:
-      - ~json.cis.fail: not_exists()
-    map:
-      - ~json.cis.fail: "NULL"
-
-  - check:
-      - ~json.cis.error: not_exists()
-    map:
-      - ~json.cis.error: "NULL"
-
-  - check:
-      - ~json.cis.notchecked: not_exists()
-    map:
-      - ~json.cis.notchecked: "NULL"
-
-  - check:
-      - ~json.cis.unknown: not_exists()
-    map:
-      - ~json.cis.unknown: "NULL"
-
-  - check:
-      - ~json.cis.score: exists()
-    map:
-      - ~json.cis.score: trim(end, %)
-
-  - check:
-      - ~json.cis.score: not_exists()
-    map:
-      - ~json.cis.score: "NULL"
-
-  - map:
-      - ~query: concat(agent , $agent.id,  ciscat save , $~json.scan_id, |, $~json.cis.timestamp, |, $~json.cis.benchmark, |, $~json.cis.profile, |, $~json.cis.pass, |, $~json.cis.fail, |, $~json.cis.error, |, $~json.cis.notchecked, |, $~json.cis.unknown, |, $~json.cis.score)
-      - ~query_response: wdb_update($~query)
-
   - map:
       - wazuh.decoders: array_append(ciscat)
+
+  - check:
+      - wazuh.origin: "wodle_cis-cat"
+      - json_event.cis: exists()
+      - json_event.type: string_equal(scan_info)
+
+  - check:
+      - json_event.scan_id: not_exists()
+    map:
+      - json_event.scan_id: "NULL"
+
+  - check:
+      - json_event.cis.timestamp: not_exists()
+    map:
+      - json_event.cis.timestamp: "NULL"
+
+  - check:
+      - json_event.cis.benchmark: not_exists()
+    map:
+      - json_event.cis.benchmark: "NULL"
+
+  - check:
+      - json_event.cis.profile: not_exists()
+    map:
+      - json_event.cis.profile: "NULL"
+
+  - check:
+      - json_event.cis.pass: not_exists()
+    map:
+      - json_event.cis.pass: "NULL"
+
+  - check:
+      - json_event.cis.fail: not_exists()
+    map:
+      - json_event.cis.fail: "NULL"
+
+  - check:
+      - json_event.cis.error: not_exists()
+    map:
+      - json_event.cis.error: "NULL"
+
+  - check:
+      - json_event.cis.notchecked: not_exists()
+    map:
+      - json_event.cis.notchecked: "NULL"
+
+  - check:
+      - json_event.cis.unknown: not_exists()
+    map:
+      - json_event.cis.unknown: "NULL"
+
+  - check:
+      - json_event.cis.score: exists()
+    map:
+      - json_event.cis.score: trim(end, %)
+
+  - check:
+      - json_event.cis.score: not_exists()
+    map:
+      - json_event.cis.score: "NULL"
+
+  - map:
+      - _query: concat(agent , $agent.id,  ciscat save , $json_event.scan_id, |, $json_event.cis.timestamp, |, $json_event.cis.benchmark, |, $json_event.cis.profile, |, $json_event.cis.pass, |, $json_event.cis.fail, |, $json_event.cis.error, |, $json_event.cis.notchecked, |, $json_event.cis.unknown, |, $json_event.cis.score)
+      - _query_response: wdb_update($_query)
