--- a/src/engine/ruleset/wazuh-core/decoders/core-rootcheck.yml
+++ b/src/engine/ruleset/wazuh-core/decoders/core-rootcheck.yml
@@ -19,9 +19,10 @@ parents:
   - decoder/core-wazuh-message/0
 
 check:
+  # Value 57 is equal to character '9' in ASCII
   - wazuh.queue: 57
 
 normalize:
   - map:
-      - wazuh.source: rootcheck
       - wazuh.decoders: array_append(core-rootcheck)
+      - wazuh.source: rootcheck
